--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,16 @@
         </init-param>
     </filter>
     
+    <filter>
+	    <filter-name>SimpleCORSFilter</filter-name>
+	    <filter-class>com.ufpb.filters.SimpleCORSFilter</filter-class>
+  	</filter>
+  	
+  	<filter-mapping>
+	    <filter-name>SimpleCORSFilter</filter-name>
+	    <url-pattern>/*</url-pattern>
+ 	 </filter-mapping>
+    
     
     
     <filter>
